<resources>
    <string name="app_name">ExpenseKeeper</string>
    <string name="income">INCOME:</string>
    <string name="expense">EXPENSE:</string>
    <string name="app">ExpenseKeeper</string>
    <string name="welcome">Welcome Back !</string>
    <string name="subtitle">EK helps you Keep Track of daily Expense</string>
    <string name="email">Email*</string>
    <string name="password">Password*</string>
    <string name="repeat_password">Repeat Password*</string>
    <string name="login">Sign In</string>
    <string name="register">Sign Up</string>
    <string name="name">UserName</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget password?</string>
    <string name="social_media">Use your Social Network</string>
    <string name="copyright">/@copyright: author by Alex_Liu</string>


    <string-array name="monthList">
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AUG</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DEC</item>
    </string-array>

    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_manage">Manage Money</string>
    <string name="drawer_item_custom">Night Mode</string>
    <string name="drawer_item_section_header">Sub-Section</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>

    <string name="drawer_item_menu_drawer_item">Menu Drawer Item</string>
</resources>
